# extract-build-logs

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  API_POSTING.md  API_POST_DESIGN.md  DATABASE_MAINTENANCE.md  DEBUG.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_QUICKSTART.md  DIY_CONCEPTUAL_GUIDE.md  DIY_GUIDE.md  DOCUMENTATION.md  Dockerfile  JENKINS_INTEGRATION.md  LOGGING_PLAN.md  MIGRATION.md  MONITORING.md  OPERATIONS.md  PLAN_JENKINS_USER_EXTRACTION.md  PYTHON36_COMPATIBILITY.md  README.md  TESTING.md  docker-compose.yml  docker-entrypoint.sh  gitlab-log-extractor.service  jenkins_instances.json.example  log-extractor-entrypoint.sh  manage-container.py  manage-container.sh  manage_container.py  monitor_dashboard.py  pyproject.toml  remove_emojis.py  requirements-manage-py36.txt  requirements-py36.txt  requirements.txt  (+2 more)
bfa-service/: .env.example  .flake8  .gitlab-ci.yml  ENHANCED_VECTOR_DB.md  README.md  analyzer_service.py  build-failure-analyzer.service  error_notifier.py  jwt_sign_helper.py  llm_openwebui_client.py  pyproject.toml  slack_reviewer.py  vector_db.py  vector_helper.py
bfa-service/context/: domain_context_patterns.json
bfa-service/docs/: PRESENTATION_VECTOR_DB.md
bfa-service/scripts/: jwt_dmz_issuer.py  jwt_sign_helper.py  vector_helper.py
bfa-service/src/: analyzer_service.py  config_loader.py  error_notifier.py  llm_openwebui_client.py  logging_config.py  pipeline_context_rag.py  resolver_agent.py  slack_helper.py  slack_reviewer.py  vector_db.py
bfa-service/tests/: README-UT.md  conftest.py  test_analyze_api.py  test_config_loader.py  test_context_rag_handler.py  test_error_notifier.py  (+9 more)
build-failure-analyzer/: AGENTIC_APPROACH.md  CURRENT_FLOW.md  HYBRID_PROPOSAL.md  PRESENTATION_GUIDE.md  PROPOSAL.md  README.md  SOLUTION_PROPOSAL.md  analyzer_service.py  jwt_dmz_issuer.py  jwt_sign_helper.py  llm_openwebui_client.py  pipeline_context_rag.py  pyproject.toml  resolver_agent.py  slack_helper.py  vector_db.py
(+56 files in other folders)
